--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
     "angular-material": "^1.1.1",
-    "angularfire": "^2.0.2"
+    "angularfire": "^2.0.2",
+    "moment": "^2.15.1",
+    "angular-moment": "^0.10.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
