--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "start": "node server/app.js",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
-    "postinstall": "bower install; grunt build"
+    "postinstall": "bower install; ./node_modules/grunt-cli/bin/grunt build"
   },
   "private": true
 }
