--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
     "firebase": "^3.4.1",
-    "grunt": "~0.4.4",
+    "grunt": "0.4.5",
+    "grunt-angular-templates": "^0.5.4",
     "grunt-autoprefixer": "~0.7.2",
-    "grunt-wiredep": "~1.8.0",
+    "grunt-build-control": "DaftMonk/grunt-build-control",
+    "grunt-cli": "1.2.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
@@ -24,25 +26,24 @@
     "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-env": "~0.4.1",
     "grunt-google-cdn": "~0.4.0",
+    "grunt-injector": "~0.5.4",
+    "grunt-karma": "~0.8.2",
+    "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
+    "grunt-node-inspector": ">=0.1.5",
+    "grunt-nodemon": "~0.2.0",
+    "grunt-protractor-runner": "^1.1.0",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
-    "grunt-env": "~0.4.1",
-    "grunt-node-inspector": ">=0.1.5",
-    "grunt-nodemon": "~0.2.0",
-    "grunt-angular-templates": "^0.5.4",
-    "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^1.1.0",
-    "grunt-injector": "~0.5.4",
-    "grunt-karma": "~0.8.2",
-    "grunt-build-control": "DaftMonk/grunt-build-control",
-    "grunt-mocha-test": "~0.10.2",
-    "grunt-contrib-sass": "^0.7.3",
+    "grunt-wiredep": "~1.8.0",
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
@@ -118,7 +119,7 @@
     "start": "node server/app.js",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
-    "postinstall": "bower install; ./node_modules/grunt/bin/grunt build"
+    "postinstall": "bower install; ./node_modules/grunt-cli/bin/grunt build"
   },
   "private": true
 }
