--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
     "grunt-wiredep": "~1.8.0",
+    "jit-grunt": "^0.5.0",
+    "time-grunt": "~0.3.1",
+    "grunt-express-server": "~0.4.17",
+    "grunt-open": "~0.2.3",
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
