--- a/package.json
+++ b/package.json
@@ -57,6 +57,24 @@
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
     "pg": "~4.3.0",
+    "jshint-stylish": "~0.1.5",
+    "connect-livereload": "~0.4.0",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-script-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-ng-jade2js-preprocessor": "^0.1.2",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.3",
+    "requirejs": "~2.1.11",
+    "karma-requirejs": "~0.2.1",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma-jade-preprocessor": "0.0.11",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma": "~0.12.9",
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "supertest": "~0.11.0",
+    "should": "~3.3.1",
     "pg-hstore": "~2.3.2",
     "sequelize": "~3.3.2",
     "serve-favicon": "~2.0.1"
