--- a/package.json
+++ b/package.json
@@ -44,10 +44,6 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
     "grunt-wiredep": "~1.8.0",
-    "jit-grunt": "^0.5.0",
-    "time-grunt": "~0.3.1",
-    "grunt-express-server": "~0.4.17",
-    "grunt-open": "~0.2.3",
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
@@ -57,24 +53,6 @@
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
     "pg": "~4.3.0",
-    "jshint-stylish": "~0.1.5",
-    "connect-livereload": "~0.4.0",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-script-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.3",
-    "requirejs": "~2.1.11",
-    "karma-requirejs": "~0.2.1",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-jade-preprocessor": "0.0.11",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma": "~0.12.9",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "supertest": "~0.11.0",
-    "should": "~3.3.1",
     "pg-hstore": "~2.3.2",
     "sequelize": "~3.3.2",
     "serve-favicon": "~2.0.1"
@@ -140,8 +118,7 @@
   "scripts": {
     "start": "node server/app.js",
     "test": "grunt test",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
-    "postinstall": "bower install; ./node_modules/grunt-cli/bin/grunt build"
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
 }
